<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootLayout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_main"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/login_login"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_nickname_email"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_nickname_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_nickname_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/input_password"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signin"
            style="@style/standard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="48dp"
            android:padding="12dp"
            android:text="@string/login_login" />

        <!--<com.google.android.gms.common.SignInButton-->
        <!--android:id="@+id/sign_in_button"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:textSize="2100sp" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:windowSoftInputMode="adjustPan">

            <TextView
                android:id="@+id/link_registration"
                style="@style/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_need_registration"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/separator"
                style="@style/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="|" />

            <TextView
                android:id="@+id/login_forgetPassword"
                style="@style/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_forgot_password"
                android:textAlignment="center" />

        </LinearLayout>
        <!-- TODO IMPLEMENT IF BACKEND WORKS -->

        <Button
            android:layout_marginTop="24dp"
            android:id="@+id/web_login_instagram_button"

            android:visibility="gone"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_instagram"
            android:drawableLeft="@drawable/instagram"
            style="@style/standard_button.WithIcon.Blue"/>

        <Button
            android:layout_marginTop="12dp"
            android:id="@+id/web_login_facebook_button"

            android:visibility="gone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook"
            android:drawableLeft="@drawable/facebook"
            style="@style/standard_button.WithIcon.Blue"/>
    </LinearLayout>
</LinearLayout>