<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_main"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingBottom="24dp"
        android:paddingTop="80dp">

        <LinearLayout
            android:id="@+id/profilePictureContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile_pic"/>

            <TextView
                android:id="@+id/profileNickname"
                style="@style/p.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/profilePictureContainer"
            android:paddingTop="24dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp">

            <LinearLayout
                android:id="@+id/score_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/profileAmountPOI"
                        style="@style/h2.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/profilePOItitle"
                        style="@style/p.Small.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profileAmountPOI"
                        android:text="@string/title_poi" />
                </RelativeLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/profileAmountTours"
                        style="@style/h2.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/profileTourTitle"
                        style="@style/p.Small.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profileAmountTours"
                        android:text="@string/title_tours" />
                </RelativeLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/profileAmountScore"
                        style="@style/h2.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/profileScoreTitle"
                        style="@style/p.Small.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profileAmountScore"
                        android:text="@string/title_score" />
                </RelativeLayout>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/editProfileButton"
                style="@style/ButtonBorder.Accent"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@id/score_layout"
                android:layout_marginTop="10dp"
                android:text="@string/profile_edit" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/white" />

    <android.support.design.widget.TabLayout
        android:id="@+id/profileTabs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/primary_main"
        android:clickable="false"
        android:focusable="true"
        android:splitMotionEvents="false"
        app:tabIndicatorColor="@color/structure_main"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextAppearance="@style/p.Light">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_favorites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:text="@string/favourites"
            android:visibility="visible" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_mytours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:text="@string/tours"
            android:visibility="visible" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_poi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:text="@string/pois"
            android:visibility="visible" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_saved"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:text="@string/saved" />
    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/profileTabContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_second">

        <TextView
            android:id="@+id/tvProfileNoContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/msg_no_data_found"
            style="@style/p.Light"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>
    </FrameLayout>

</LinearLayout>
