...
    <string name="disclaimer_text3">Die Autoren oder Copyrightinhaber übernehmen keine Haftung für Schäden, welche durch einen leeren Akku enstehen. Der Benutzer ist selbst verantwortlich die benötigten Informationen zu beschaffen um die Wanderung auch ohne Wanderlust fortzufahen.</string>
    <string name="disclaimer_mit_header">MIT Lizenz</string>
    <string name="disclaimer_mit_text">Die Software wird ohne jede ausdrückliche oder implizierte Garantie bereitgestellt, einschliesslich der Garantie zur Benutzung für den Vorgesehenen oder einem bestimmten Zweck sowie jeglicher Rechtsverletzung, jedoch nicht darauf beschränkt. In keinem Fall sind die Autoren oder Copyrightinhaber für jeglichen Schaden oder sonstige Ansprüche haftbar zu machen, 


    <!-- MENU RELATED STRINGS -->
    <string name="drawer_open">Menu öffnen</string>
    <string name="drawer_close">Menu schliessen</string>


    <!-- TOUR RELATED STRINGS -->
    <string name="tour_button_show_map">Start</string>
    <string name="tour_equipment">Ausrüstung</string>
...

    <!-- REGISTRATION -->
    <string name="registration_name">Benutzernamen</string>
    <string name="registration_email">E-Mail</string>
    <string name="registration_password">Passwort</string>
    <string name="registration_password_repeat">Passwort wiederholen</string>
    <string name="registration_account_exist">Bereits registriert? Login</string>
    <string name="registration_create_account">Account erstellen</string>
    <string name="registration_password_required">Ein Passwort wird benötigt</string>
    <string name="registration_password_no_match">Passwort stimmt nicht überein</string>
    <string name="registration_username_required">Ein Name wird benötigt</string>
    <string name="registration_email_required">E-Mail-Adresse wird benötigt</string>
    <string name="registration_nickname_mail_used">Benutzernamen oder E-Mail-Adresse wird bereits verwendet</string>
...
    <string name="registration_insert_email_address">E-Mail-Adresse eingeben</string>


    <!-- LOGIN -->
    <string name="login_nickname_email">Benutzernamen / E-Mail</string>
    <string name="login_password">Passwort</string>
    <string name="login_login">Login</string>
    <string name="login_failure">Login fehlgeschlagen</string>
    <string name="login_need_registration">Neuen Account erstellen</string>
    <string name="login_forgot_password">Passwort vergessen?</string>
    <string name="login_instagram">Anmelden mit Instagram</string>
    <string name="login_facebook">Anmelden mit Facebook</string>

...
